codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__messages__tests__mixed_image_labels_preserve_existing_placeholders_without_duplicates.snap
---
source: tui/src/history_cell/messages_tests.rs
assertion_line: 82
expression: "ratatui::text::Text::from(cell.display_lines(40))"
---
▌ 
▌ [Image #1]
▌ [Image #3]
▌ 
▌ [Image #2] compare these
▌
