codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__messages__tests__user_prompt_urls_keep_destinations_across_widths.snap
---
source: tui/src/history_cell/messages_tests.rs
assertion_line: 52
expression: "snapshots.join(\"\\n\\n\")"
---
width 120
▌ 
▌ from this site, write out the ascii for solid octants 18 columns
▌ https://example.test/terminal-link-wrapping/solid-octants
▌ [Image #1] See (https://example.test/a).
▌ 

width 60
▌ 
▌ from this site, write out the ascii for solid octants 18
▌ columns
▌ https://example.test/terminal-link-wrapping/solid-octants
▌ [Image #1] See (https://example.test/a).
▌ 

width 24
▌ 
▌ from this site, write
▌ out the ascii for
▌ solid octants 18
▌ columns
▌ https://example.test/
▌ terminal-link-wrappin
▌ g/solid-octants
▌ [Image #1] See
▌ (https://example.test
▌ /a).
▌
